# vacua

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: pages.yml
docs/: 3d_printing.md  index.html  pitfalls.md  specification.md  style.css  vacua.js
examples/: cafe.py  rotation_ligature.py  specimen.py
scad/: vacua_param.scad
scad/generators/: keychain.py  plate.py
scripts/: build_font.py  check-install.html  make_og_image.py
tests/: test_alphabet.py  test_render.py
vacua/: __init__.py  __main__.py  alphabet.py  render.py  scad_emit.py  variants.py
